--- a/style.css
+++ b/style.css
@@ -2,36 +2,40 @@
    /* height:500px;
     border:2px solid red;*/
     padding-top:0px;
-    padding-left:150px;
+    padding-left:200px;
     padding-top: 100px;
 
 }
 .child-1{
     
     display: inline-block;
-    width: 250px;
-    margin:50px;
+     width: 300px;
+    height: 600px;
+    margin:10px;
     padding-right: 50px;
     
 }
 .child-2{
     display: inline-block;
-    width:250px;
-    margin:50px;
+     width: 300px;
+    height: 600px;
+    margin:10px;
     padding-right: 50px;
     
 }
 .child-3{
     display: inline-block;
-    width: 250px;
-    margin:50px;
+     width: 300px;
+    height: 600px;
+    margin:10px;
     padding-right: 50px;
     
 }
 .child-4{
     display: inline-block;
-    width: 250px;
-    margin:50px;
+    width: 300px;
+    height: 600px;
+    margin:10px;
     padding-right: 50px;
     
 }
